Reorganization: randseq, randseq_dsp, randseq_addnoise

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -303,6 +303,18 @@
   url          = {http://www.amazon.com/dp/086380036X},
   }
 
+@book{ewins1986,
+  isbn         = {0863800173},
+  title        = {Modal Testing: Theory and Practice},
+  publisher    = {Research Studies Press},
+  year         = {1986},
+  month        = {April},
+  edition      = {``Reprinted with amendments April 1986"},
+  author       = {D. J. Ewins},
+  pages        = {269},
+  url          = {http://www.amazon.com/dp/086380036X},
+  }
+
 @book{kay1988,
   isbn10       = {8131733564},
   isbn         = {9788131733561},
