--- a/common/math/graphics/system/sysH_xyuvpq.tex
+++ b/common/math/graphics/system/sysH_xyuvpq.tex
@@ -16,10 +16,10 @@
   %-------------------------------------
   %  _____  transfer function box
   % |     |
-  % | h[n]|
+  % | h(n)|
   % |_____|
   %-------------------------------------
-  \fnodeput{0}{ 0}{ 0}{sysH}{$\fh[n]$}%
+  \fnodeput{0}{ 0}{ 0}{sysH}{$\fh(n)$}%
     %       |   |  |   |       |____ label in box
     %       |   |  |   |____________ node name
     %       |   |  |________________ y location
@@ -45,17 +45,17 @@
   \pnode(+2.50,0.00){sysY}%         signal output label location
   \pnode(-1.50,0.75){sysU}%         noise  input  label location
   \pnode(+1.50,0.75){sysV}%         noise  output label location
-  \pnode(-0.85,0.00){sysXh}%        signal input  near h[n] label location
-  \pnode(+0.85,0.00){sysYh}%        signal output near h[n] label location
+  \pnode(-0.85,0.00){sysXh}%        signal input  near h(n) label location
+  \pnode(+0.85,0.00){sysYh}%        signal output near h(n) label location
   %-------------------------------------
   % label text
   %-------------------------------------
-  \uput[180](sysX) {$\fx[n]$}% signal input  label
-  \uput[  0](sysY) {$\fy[n]$}% signal output label
-  \uput[ 90](sysU) {$\fu[n]$}% input  noise  label
-  \uput[ 90](sysV) {$\fv[n]$}% output noise  label
-  \uput[-90](sysXh){$\fp[n]$}% p = x + u
-  \uput[-90](sysYh){$\fq[n]$}% y = q + v
+  \uput[180](sysX) {$\rvx(n)$}% signal input  label
+  \uput[  0](sysY) {$\rvy(n)$}% signal output label
+  \uput[ 90](sysU) {$\rvu(n)$}% input  noise  label
+  \uput[ 90](sysV) {$\rvv(n)$}% output noise  label
+  \uput[-90](sysXh){$\rvp(n)$}% p = x + u
+  \uput[-90](sysYh){$\rvq(n)$}% y = q + v
   %-------------------------------------
   % system connections
   %-------------------------------------
