--- a/common/randprocess.tex
+++ b/common/randprocess.tex
@@ -357,7 +357,7 @@ Let $\opR$ be the \ope{autocorrelation operator} of a \fncte{random process} $\r
   \\&= \pE\brs{\brs{ x(t)-\sum_{n\in\Z}\dot{x}_n \psi_n(t) }\brs{ x(t)-\sum_{m\in\Z}\dot{x}_m \psi_m(t) }^\ast}
   \\&= \pE\brs{x(t)x^\ast(t) -x(t)\brp{\sum_{n\in\Z}\dot{x}_n \psi_n(t)}^\ast -x^\ast(t)\sum_{n\in\Z}\dot{x}_n \psi_n(t) + \sum_{n\in\Z}\dot{x}_n \psi_n(t) \brp{\sum_{m\in\Z}\dot{x}_m \psi_m(t) }^\ast }
   \\&= \pE\brs{x(t)x^\ast(t)} -\pE\brs{x(t)\brp{\sum_{n\in\Z}\dot{x}_n \psi_n(t)}^\ast} -\pE\brs{x^\ast(t)\sum_{n\in\Z}\dot{x}_n \psi_n(t)} + \pE\brs{\sum_{n\in\Z}\dot{x}_n \psi_n(t) \brp{\sum_{m\in\Z}\dot{x}_m \psi_m(t) }^\ast }
-  \\&& \text{by \thme{Mercer's Theorem}\ifsxref{integrat}{thm:mercer}}
+  \\&\text{by \thme{Mercer's Theorem}\xref{thm:mercer}}
   \\&= \sum_{n\in\Z}\lambda_n |\psi_n(t)|^2 -\sum_{n\in\Z}\lambda_n \left|\psi_n(t) \right|^2  -\brp{\sum_{n\in\Z}\lambda_n \left|\psi_n(t) \right|^2}^\ast + \sum_{n\in\Z}\lambda_n \left|\psi_n(t) \right|^2
   \\&= \sum_{n\in\Z}\lambda_n |\psi_n(t)|^2 -\sum_{n\in\Z}\lambda_n \left|\psi_n(t) \right|^2  -\sum_{n\in\Z}\lambda_n \left|\psi_n(t) \right|^2 + \sum_{n\in\Z}\lambda_n \left|\psi_n(t) \right|^2
   \\&= 0
