--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1648,18 +1648,26 @@
 %--------------------------------------
 % System identification
 %--------------------------------------
-\newcommand{\Rxx}    [1][xx] {R_{\mathsfup{#1}}}  % Autocorrelation function
-\newcommand{\Sxx}    [1][xx] {S_{\mathsfup{#1}}}  % spectral density
-\newcommand{\Swxx}   [1][xx] {\tilde{S}_{\mathsfup{#1}}}  % spectral density
+\newcommand{\Rxx}    [1][xx] {\mathfnct{R}_{\mathsfup{#1}}}  % Autocorrelation function
+\newcommand{\Sxx}    [1][xx] {\mathfnct{S}_{\mathsfup{#1}}}  % spectral density
+\newcommand{\Swxx}   [1][xx] {\tilde{\mathfnct{S}}_{\mathsfup{#1}}}  % spectral density
 \newcommand{\Swuu}   {\Swxx[uu]}
 \newcommand{\Swvv}   {\Swxx[vv]}
 \newcommand{\Swyy}   {\Swxx[yy]}
 \newcommand{\Swxy}   {\Swxx[xy]}
 \newcommand{\Swyx}   {\Swxx[yx]}
 \newcommand{\Swyu}   {\Swxx[yu]}
+\newcommand{\Swyv}   {\Swxx[yv]}
 \newcommand{\Swuy}   {\Swxx[uy]}
 \newcommand{\Swxv}   {\Swxx[xv]}
 \newcommand{\Swww}   {\Swxx[ww]}
+\newcommand{\Swwx}   {\Swxx[wx]}
+\newcommand{\Swxw}   {\Swxx[xw]}
+\newcommand{\Swxq}   {\Swxx[xq]}
+\newcommand{\Swqx}   {\Swxx[qx]}
+\newcommand{\Swqq}   {\Swxx[qq]}
+\newcommand{\Swwy}   {\Swxx[wy]}
+\newcommand{\Swyw}   {\Swxx[yw]}
 
 \newcommand{\Swphi}  {\Swxx[\phi\phi]}
 \newcommand{\Swpsi}  {\Swxx[\psi\psi]}
@@ -1684,10 +1692,17 @@
 \newcommand{\Rzz}    {\Rxx[zz]}
 \newcommand{\avgRss} {\avgRxx[ss]}
 
-\newcommand{\Rxy} {\Rxx[xy]} % Cross-correlation function
+\newcommand{\Rxy} {\Rxx[xy]}
+\newcommand{\Rxv} {\Rxx[xv]}
+\newcommand{\Ryv} {\Rxx[yv]}
 \newcommand{\Ryx} {\Rxx[yx]}
 \newcommand{\Ruu} {\Rxx[uu]}
+\newcommand{\Rwy} {\Rxx[wy]}
+\newcommand{\Ryw} {\Rxx[yw]}
+\newcommand{\Rwx} {\Rxx[wx]}
+\newcommand{\Rxw} {\Rxx[xw]}
 \newcommand{\Rvv} {\Rxx[vv]}
+\newcommand{\Rxq} {\Rxx[xq]}
 \newcommand{\Rpq} {\Rxx[pq]}
 \newcommand{\Rqp} {\Rxx[qp]}
 \newcommand{\Rfg} {\Rxx[fg]}
@@ -1718,7 +1733,7 @@
 \newcommand{\Spq} {\Sxx[pq]}
 \newcommand{\Sqp} {\Sxx[qp]}
 
-\newcommand{\ZSxx}   [1][xx] {\hat{S}_{\mathsfup{#1}}}  % Z-domain spectral density
+\newcommand{\ZSxx}   [1][xx] {\hat{\mathfnct{S}}_{\mathsfup{#1}}}  % Z-domain spectral density
 \newcommand{\ZSyy}   {\ZSxx[yy]}
 \newcommand{\ZSxy}   {\ZSxx[xy]} % Cross-correlation function
 \newcommand{\ZSyx}   {\ZSxx[yx]} % Cross-correlation function
@@ -1726,6 +1741,30 @@
 \newcommand{\Szpsi}  {\ZSxx[\psi\psi]}
 \newcommand{\Szfg}   {\ZSxx[fg]}
 \newcommand{\Szff}   {\ZSxx[ff]}
+
+\newcommand{\Szxx}   [1][xx] {\hat{\mathfnct{S}}_{\mathsfup{#1}}}  % z-domain spectral density
+\newcommand{\Szuu}   {\Szxx[uu]}
+\newcommand{\Szvv}   {\Szxx[vv]}
+\newcommand{\Szyy}   {\Szxx[yy]}
+\newcommand{\Szxy}   {\Szxx[xy]}
+\newcommand{\Szyx}   {\Szxx[yx]}
+\newcommand{\Szyu}   {\Szxx[yu]}
+\newcommand{\Szyv}   {\Szxx[yv]}
+\newcommand{\Szuy}   {\Szxx[uy]}
+\newcommand{\Szxv}   {\Szxx[xv]}
+\newcommand{\Szww}   {\Szxx[ww]}
+\newcommand{\Szwx}   {\Szxx[wx]}
+\newcommand{\Szxw}   {\Szxx[xw]}
+\newcommand{\Szxq}   {\Szxx[xq]}
+\newcommand{\Szqx}   {\Szxx[qx]}
+\newcommand{\Szqq}   {\Szxx[qq]}
+\newcommand{\Szwy}   {\Szxx[wy]}
+\newcommand{\Szyw}   {\Szxx[yw]}
+
+
+
+
+\newcommand{\Cxy}{\mathfnct{C}_{\mathsfup{xy}}}  % coherence function
 
 %--------------------------------------
 % Estimation theory
