--- a/common/randseq_dsp.tex
+++ b/common/randseq_dsp.tex
@@ -2,97 +2,404 @@
 % LaTeX File
 % Daniel J. Greenhoe
 %============================================================================
-%======================================
-\chapter{Random Sequences DSP}
-%======================================
 %=======================================
-\section{Additive noise}
+\chapter{Random Sequence DSP}
 %=======================================
-\begin{figure}
-  \centering%
-  \includegraphics{graphics/xhyplusv.pdf}
-  \caption{System model with additive input and output noise\label{fig:xhyplusv}}
-\end{figure}
+%=======================================
+\section{LTI filtering}
+%=======================================
 %---------------------------------------
-\begin{proposition}
+\begin{theorem}
 \footnote{
-  \citerpg{shin2008}{293}{0470725648}
+  \citerp{papoulis}{310}
   }
-\label{prop:Swxyv}
+\label{thm:Rxyh}
 %---------------------------------------
-Let $\opS$ be a \structe{system} with \fncte{impulse response} $\fh[n]$,
-input $\fx[n]$, and output $\fy[n]$.
-Let $\fv[n]$ be \fncte{noise sequence} and $\fy'[n]\eqd\fy[n]+\fv[n]$.
-\propbox{
-  \brb{\begin{array}{FMMD}
-      (A).& $\fx[n]$ and $\fy[n]$ are &\prope{WSS} & and
-    \\(B).& $\fx[n]$ and $\fv[n]$ are &            &
-        \\& \qquad\prope{uncorrelated}&            &
+\\\begin{minipage}{\tw-50mm}
+Let $\rvx(n)$ be a \fncte{random sequence} with \fncte{mean} $\pmeanx$
+and $\rvy(n)$    a \fncte{random sequence} with \fncte{mean} $\pmeany$.
+Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
+\fncte{input} $\rvx(n)$, and \fncte{output} $\rvy(n)$.
+\end{minipage}
+\hfill\tbox{\includegraphics{graphics/sysH_xy.pdf}}
+\\
+\thmbox{
+   \brb{\begin{array}{M}
+      $\opS$ is
+   %\\\prope{linear time invariant}
+    (\prope{LTI})
+  \end{array}}
+  \implies
+  \brb{\begin{array}{Frc>{\ds}l>{\ds}lD}
+       (1).&\pmeany(n)&=& \sum_{k\in\Z} \fh(k)      \pmeanx(n-k)  &\eqd \fh(n)\convd \pmeanx(n) & and
+     \\(2).&\Rxy(n,m) &=& \sum_{k\in\Z} \fh^\ast(k) \Rxx(n-k,m+k) &                            & and 
+     \\(3).&\Ryy(n,m) &=& \sum_{k\in\Z} \fh^\ast(k) \Ryx(n-k,m+k)
+  \end{array}} 
+  }
+\end{theorem}
+\begin{proof}
+\begin{align*}
+   \pmeany(n)
+     &\eqd \pE\brs{\rvy(n)}
+     && \text{by definition of $\pmeany$}
+     && \text{\xref{def:pmeanxn}}
+   \\&= \pE\brs{\sum_{k\in\Z} \fh(k) \rvx(n-k)}
+     && \text{by \prope{LTI} hypothesis}
+   \\&= \sum_{k\in\Z} \fh(k) \pE\brs{\rvx(n-k)}
+     && \text{by \prope{linear} property}
+   \\&= \sum_{k\in\Z} \fh(k) \pmeanx(n-k)
+     && \text{by definition of $\pmeanx$}
+     && \text{\xref{def:pmeanxn}}
+   \\&\eqd \fh(n)\convd \pmeanx(n) 
+     && \text{by definition of \ope{convolution}}
+     && \text{\xref{def:dsp_conv}}
+   \\
+   \\
+   \Rxy(n,m)
+     &\eqd \pE\brs{\rvx(n+m) \rvy^\ast(n) }
+     && \text{by definition of $\Rxy(n,m)$}
+     && \text{\xref{def:Rxynm}}
+   \\&= \pE\brs{\rvx(n+m) \brp{\fh(n)\convd\rvx(n)}^\ast}
+     && \text{by \prope{LTI} hypothesis}
+   \\&\eqd \pE\brs{\rvx(n+m) \brp{ \sum_{k\in\Z} h(k) \rvx(n-k) }^\ast }
+     && \text{by definition of \ope{convolution} $\conv$}
+     && \text{\xref{def:dsp_conv}}
+   \\&=    \pE\brs{\rvx(n+m) \sum_{k\in\Z} \fh^\ast(k) \rvx^\ast(n-k)  }
+     && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
+     && \text{\xref{def:staralg}}
+   \\&=    \pE\brs{ \sum_{k\in\Z} \fh^\ast(k) \rvx(n+m)\rvx^\ast(n-k)  }
+     && \text{by \prope{distributive} property of $\fieldC$}
+     && \text{\ifxref{algebra}{def:field}}
+   \\&= \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx(n-k+k+m) \rvx^\ast(n-k) }
+     && \text{by \prope{linear} property of $\pE$}
+     && \text{\xref{thm:pE}}
+   \\&\eqd \sum_{k\in\Z} \fh^\ast(k) \Rxx(n-k,m+k)
+     && \text{by definition of $\Rxx(n,m)$}
+     && \text{\xref{def:Rxxnm}}
+   %\\&\eqd \sum_{k'\in\Z} \fh^\ast(-k') \Rxx(n+k',m-k')
+   %  && \text{where $k'\eqd -k$}
+   %\\&\eqd \sum_{k\in\Z} \fh^\ast(-k) \Rxx(n+k,m-k)
+   %  && \text{where $k\eqd k'$}
+   %\\&= \Rxx(n+k,m) \convd \fh^\ast(-m)
+   %  && \text{by definition of \ope{convolution}}
+   %  && \text{\xref{def:dsp_conv}}
+   \\
+   \\
+   \Ryy(n,m)
+     &\eqd \pE\brs{\rvy(n+m) \rvy^\ast(n) }
+     && \text{by definition of $\Rxy(n,m)$}
+     && \text{\xref{def:Rxynm}}
+   \\&= \pE\brs{\rvy(n+m) \brp{\fh(n)\convd\rvx(n)}^\ast}
+     && \text{by \prope{LTI} hypothesis}
+   \\&\eqd \pE\brs{\rvy(n+m) \brp{ \sum_{k\in\Z} \fh(k) \rvx(n-k) }^\ast }
+     && \text{by definition of \ope{convolution}}
+     && \text{\xref{def:dsp_conv}}
+   \\&=    \pE\brs{\rvy(n+m) \sum_{k\in\Z} \fh^\ast(k) \rvx^\ast(n-k)  }
+     && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
+     && \text{\xref{def:staralg}}
+   \\&=    \pE\brs{ \sum_{k\in\Z} \fh^\ast(k) \rvy(n+m)\rvx^\ast(n-k)  }
+     && \text{by \prope{distributive} property of $\fieldC$}
+     && \text{\ifxref{algebra}{def:field}}
+   \\&=    \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvy(n-k+k+m) \rvx^\ast(n-k) }
+     && \text{by \prope{linear} property of $\pE$}
+     && \text{\xref{thm:pE}}
+   \\&\eqd \sum_{k\in\Z} \fh^\ast(k) \Ryx(n-k,m+k)
+     && \text{by definition of $\Rxy(n,m)$}
+     && \text{\xref{def:Ryynm}}
+   %\\&= \sum_{k'\in\Z} \fh^\ast(-k') \Ryx(n+k',m-k')
+   %  && \text{where $k'\eqd-k$}
+   %\\&= \sum_{k\in\Z} \fh^\ast(-k) \Ryx(n+k,m-k)
+   %  && \text{where $k\eqd k'$}
+   %\\&\eqd \Ryx(n+k,m) \convd \fh^\ast(-m)
+   %  && \text{by definition of \ope{convolution}}
+   %  && \text{\xref{def:dsp_conv}}
+   %\\
+   %\\
+   %\Ryy(n,m)
+   %  &= \Rxy(n,m)\convd \fh(m)
+   %  && \text{by previous result}
+   %\\&= \brs{\Rxx(n,m) \convd \fh^\ast(-m)}\convd \fh(-m)
+   %  && \text{by previous result}
+   %\\&= \Rxx(n,m) \convd \fh(-m) \convd \fh^\ast(-m)
+   %  && \text{by previous result}
+   %\\
+   %\\
+   %\Ryy(n,m)
+   %  &= \Rxx(n,m)\convd\fh(-m) \convd \fh^\ast(-m)
+   %  && \text{by previous result}
+   %\\&\eqd \sum_{p\in\Z}\fh^\ast(-p) \brs{\Rxx(n,m-p)\convd\fh(-m)}
+   %  && \text{by definition of \ope{convolution}}
+   %  && \text{\xref{def:dsp_conv}}
+   %\\&= \sum_{p\in\Z}\fh^\ast(-p) \sum_{k\in\Z}\fh(-k) \Rxx(n,m-p-k)
+   %  && \text{by definition of \ope{convolution}}
+   %  && \text{\xref{def:dsp_conv}}
+   %\\&= \sum_{p\in\Z} \sum_{k\in\Z} \fh(-k) \fh^\ast(-p) \Rxx(n,m-p-k)
+   %  && \text{by \prope{distributive} property of $\fieldC$}
+   %  && \text{\xref{def:field}}
+\end{align*}
+\end{proof}
+
+\begin{figure}[ht]\color{figcolor}
+\begin{fsK}
+\begin{center}
+  \setlength{\unitlength}{0.2mm}
+  \begin{picture}(300,100)(-100,-60)
+  \thicklines
+  %\graphpaper[10](0,0)(160,80)
+  \put(-100,  10 ){\makebox (100, 40)[b]{$\rvx(n)$}  }
+  \put(-100, -50 ){\makebox (100, 40)[t]{$\Rxx(m)$}  }
+  \put(-100, -50 ){\makebox (100, 40)[b]{$\Sxx(z)$}  }
+  \put(-100,   0 ){\vector  (  1,  0){100}             }
+  \put(   0, -50 ){\framebox(100,100){$\convd\fh(n)$}  }
+  \put( 100,   0 ){\vector  (  1,  0){100}             }
+  \put( 100,  10 ){\makebox (100, 40)[b]{$\rvy(n)$}  }
+  \put( 100, -50 ){\makebox (100, 40)[t]{$\Ryy(m)$}  }
+  \put( 100, -50 ){\makebox (100, 40)[b]{$\Syy(z)$}  }
+  \put(  50, -60 ){\makebox (  0,  0)[t]{$\Rxy(m)$}  }
+  \end{picture}
+\caption{
+   Linear system with WSS \fncte{random sequence} input and output
+   \label{fig:d-linear-sys-WSS}
+   }
+\end{center}
+\end{fsK}
+\end{figure}
+
+%---------------------------------------
+\begin{corollary}
+\footnote{
+  \citerp{papoulis}{323}
+  }
+\label{cor:Rxyh}
+%---------------------------------------
+\\\begin{minipage}{\tw-50mm}
+Let $\rvx(n)$ be a \fncte{random sequence} with \fncte{auto-correlation} $\Rxx(n,m)$,
+    $\rvy(n)$    a \fncte{random sequence} with \fncte{auto-correlation} $\Ryy(n,m)$,
+and $\Rxy(n,m)$  the \fncte{cross-correlation} of $\rvx$ and $\rvy$.
+Let $\opS$ be a \structe{system} with input $\rvx(n)$, output $\rvy(n)$, 
+and \fncte{impulse response} $\fh(n)$.
+\end{minipage}
+\hfill\tbox{\includegraphics{graphics/sysH_xy.pdf}}
+\\
+\corbox{
+  \brbr{\begin{array}{FMD}
+      (A). & $\opS$    is \prope{LTI} & and
+    \\(B). & $\rvx(n)$ is \prope{WSS} & and
+    \\(C). & $\rvy(n)$ is \prope{WSS} &
+  \end{array}}
+  \implies
+  \brbl{\begin{array}{Frc>{\ds}lc>{\ds}lD}
+       (1).&\pmeany &=& \pmeanx\sum_{n\in\Z} \fh(k)          &    &                                      & and
+     \\(2).&\Rxy(m) &=& \Rxx(m)\convd \fh^\ast(-m)           &\eqd& \sum_{k\in\Z} \fh^\ast(k) \Rxx(m+k)  & and
+     \\(3).&\Ryy(m) &=& \Ryx(m)\convd \fh^\ast(-m)           &\eqd& \sum_{k\in\Z} \fh^\ast(k) \Rxy(m+k)  & and
+     \\(4).&\Ryy(m) &=& \mc{4}{l}{\ds\Rxx^\ast(m)\convd \fh(-m)\convd\fh^\ast(-m)} %&\eqd& \mc{2}{l}{\ds\sum_{p\in\Z}\sum_{k\in\Z}\fh(k)h^\ast(p) \Rxx(m-p-k)}
+  \end{array}}
+  }
+\end{corollary}
+\begin{proof}
+\begin{align*}
+  \pmeany 
+     &= \pmeany(n)
+     && \text{by \prefp{prop:Rxynmm}}
+     && \text{and hypothesis (A)}
+   \\&= \sum_{n\in\Z} \fh(k) \pmeanx(n-k)
+     && \text{by \prefp{thm:Rxynm}}
+     && \text{and hypothesis (B)}
+   \\&= \sum_{n\in\Z} \fh(k) \pmeanx(0)
+     && \text{by \prefp{def:wss}}
+     && \text{and hypothesis (B)}
+   \\&= \pmeanx(0) \sum_{n\in\Z} \fh(k) 
+     && \text{by \prope{linear} property of $\sum$}
+   \\&= \pmeanx \sum_{n\in\Z} \fh(k) 
+     && \text{by \prefp{prop:Rxynmm}}
+   \\
+  \Rxy(m)
+     &\eqd \Rxy(0,m)
+     && \text{by \prefp{prop:Rxynmm}}
+     && \text{and hypothesis (A)}
+   \\&= \sum_{k\in\Z} \fh^\ast(k) \Rxx(0-k,m+k)
+     && \text{by \prefp{thm:Rxyh}}
+     && \text{and hypothesis (B)}
+   \\&= \sum_{k\in\Z} \fh^\ast(k) \Rxx(m+k)
+     && \text{by \prefp{prop:Rxynmm}}
+     && \text{and hypothesis (A)}
+   \\&= \fh^\ast(-m) \convd\Rxx(m)
+     && \text{by \prefp{prop:conv_knk}}
+\\
+\\
+  \Ryy(m)
+     &\eqd \Ryy(0,m)
+     && \text{by \prefp{prop:Rxynmm}}
+     && \text{and hypothesis (A)}
+   \\&= \sum_{k\in\Z} \fh^\ast(k) \Ryx(n-k,m+k)
+     && \text{by \prefp{thm:Rxyh}}
+     && \text{and hypothesis (B)}
+   \\&= \sum_{k\in\Z} \fh^\ast(k) \Ryx(m+k)
+     && \text{by \prefp{prop:Rxynmm}}
+     && \text{and hypothesis (A)}
+   \\&= \fh^\ast(-m) \convd\Ryx(m)
+     && \text{by \prefp{prop:conv_knk}}
+\\
+\\
+  \Ryy(m)
+     &= \fh^\ast(-m) \convd\Ryx(m)
+     && \text{by result (2)}
+   \\&= \fh^\ast(-m) \convd\Rxy^\ast(m)
+     && \text{by \prefp{cor:Rxym}}
+   \\&= \fh^\ast(-m) \convd\brs{\fh^\ast(-m) \convd\Rxx(m)}^\ast
+     && \text{by result (1)}
+   \\&= \fh^\ast(-m) \convd\fh(-m) \convd\Rxx^\ast(m)
+      && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
+      && \text{\xref{def:staralg}}
+\end{align*}
+\end{proof}
+
+%=======================================
+\section{LTI filtering of WSS sequences}
+%=======================================
+%---------------------------------------
+\begin{theorem}
+\footnote{
+  \citerp{papoulis}{323}
+  }
+\label{thm:ZSxy}
+%---------------------------------------
+Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
+\fncte{input} $\rvx(n)$, and \fncte{output} $\rvy(n)$.
+\thmbox{
+  \brb{\begin{array}{FMD}
+    (A).& $\fh$ is \prope{linear time invariant} & and\\
+    (B).& \mc{2}{M}{$\rvx$ and $\rvy$ are \prope{wide sense stationary}}
+  \end{array}}
+  \implies
+  \brb{\begin{array}{F>{\ds}rc>{\ds}lD}
+       (1).&\ZSxy(z) &=& \ZSxx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}      & and
+     \\(2).&\ZSyy(z) &=& \ZSyx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}      & and
+     \\(3).&\ZSyy(z) &=& \ZSxx(z) \Zh\brp{z} \Zh^\ast\brp{\frac{1}{z^\ast}}
+  \end{array}}
+  }
+\end{theorem}
+\begin{proof}
+\begin{align*}
+  \ZSxy(z)
+     &\eqd \opZ \Rxy(m)
+    && \text{by definition of $\Sxy(z)$}
+    && \text{\xref{def:csd}}
+   \\&= \opZ \brs{\Rxx(m) \convd \fh^\ast(-m)}
+    && \text{by \prefp{cor:Rxyh}}
+   \\&= \brs{\opZ\Rxx(m)}\,\opZ\brs{\fh^\ast(-m)}
+    && \text{by \thme{convolution theorem}}
+    && \text{\xref{thm:conv}}
+   \\&= \ZSxx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}
+    && \text{by \prefp{thm:opZ}}
+   \\
+   \\
+  \ZSyy(z)
+     &\eqd \opZ \Ryy(m)
+    && \text{by definition of $\ZSyy(z)$}
+    && \text{\xref{def:csd}}
+   \\&= \opZ \brs{\Ryx(m) \convd \fh^\ast(-m)}
+    && \text{by \prefp{cor:Rxyh}}
+   \\&= \brs{\opZ\Ryx(m)}\,\opZ\brs{\fh^\ast(-m)}
+    && \text{by \thme{convolution theorem}}
+    && \text{\xref{thm:conv}}
+   \\&= \ZSyx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}
+    && \text{by \prefp{thm:opZ}}
+   \\
+   \\
+  \ZSyy(z)
+     &= \ZSyx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}
+     && \text{by previous result}
+     && \text{(2)}
+   \\&= \ZSxy^\ast\brp{\frac{1}{z^\ast}} \Zh^\ast\brp{\frac{1}{z^\ast}}
+     && \text{by \prefp{thm:ZSxy_sym}}
+   \\&= \brs{ \ZSxx(z') \Zh^\ast\brp{\frac{1}{z'^\ast}} }^\ast_{z'=\frac{1}{z^\ast}} 
+        \Zh^\ast\brp{\frac{1}{z^\ast}}
+     && \text{by previous result}
+     && \text{(1)}
+   \\&= \ZSxx^\ast\brp{\frac{1}{z^\ast}} \Zh\brp{z} \Zh^\ast\brp{\frac{1}{z^\ast}}
+   \\&= \ZSxx(z) \Zh\brp{z} \Zh^\ast\brp{\frac{1}{z^\ast}}
+     && \text{by \pref{thm:ZSxy_sym}}
+\end{align*}
+\end{proof}
+
+%---------------------------------------
+\begin{corollary}
+\label{cor:Swxy}
+%---------------------------------------
+Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
+\fncte{input} $\rvx(n)$, and \fncte{output} $\rvy(n)$.
+\corbox{
+  \brb{\begin{array}{FMD}
+    (A).& $\fh$ is \prope{linear time invariant} & and\\
+    (B).& \mc{2}{M}{$\rvx$ and $\rvy$ are \prope{wide sense stationary}}
   \end{array}}
   \implies
   \brb{\begin{array}{FrclD}
-      (1).&\Swxx[y'y'](\omega) &=& \Swyx(\omega)                 & and
-    \\(2).&\Swxx[y'x] (\omega) &=& \Swyy(\omega) + \Swvv(\omega) & and
-    \\(3).&\Swxx[xy'] (\omega) &=& \Swxy(\omega) & 
+       (1).&\Swxy(\omega) &=& \ds \Swxx(\omega) \Fh^\ast(\omega) & and
+     \\(2).&\Swyy(\omega) &=& \ds \Swxy(\omega) \Fh     (\omega)   & and
+     \\(3).&\Swyy(\omega) &=& \mc{2}{l}{\ds \Swxx(\omega) \abs{\Fh(\omega)}^2}
   \end{array}}
   }
-\end{proposition}
+\end{corollary}
 \begin{proof}
 \begin{align*}
-  \Swxx[y'y'](\omega)
-    &\eqd \opDTFT\Rxx[y'y'][m]
-    && \text{by definition of \ope{DTFT}}
-    && \text{\xref{def:dtft}}
-  \\&\eqd \opDTFT\pE\brs{\rvy'[m]\rvy'^\ast[0]}
-    && \text{by definition of $\Rxy$}
-    && \text{\xref{def:Rxym}}
-  \\&\eqd \opDTFT\pE\brs{(\rvy[m]+\fv[m])(\rvy[0]+\fv[0])^\ast[0]}
-    && \text{by definition of $\rvy'$}
-  \\&= \mathrlap{
-       \opDTFT\pE\brs{\rvy[m]\rvy^\ast[0]}
-     + \opDTFT\pE\brs{\rvy[m]\rvv^\ast[0]}
-     + \opDTFT\pE\brs{\fv[m]\rvy^\ast[0]} 
-     + \opDTFT\pE\brs{\fv[m]\rvv^\ast[0]}
-     }
-  \\&= \mathrlap{
-       \opDTFT\pE\brs{\rvy[m]\rvy^\ast[0]}
-     + \cancelto{0}{\opDTFT\pE\brs{\rvy[m]\rvv^\ast[0]}}
-     + \cancelto{0}{\opDTFT\pE\brs{\fv[m]\rvy^\ast[0]} }
-     + \opDTFT\pE\brs{\fv[m]\rvv^\ast[0]}
-     \quad\text{by \prope{uncorrelated} hypothesis (C)}
-     }
-  \\&= \opDTFT\Ryy[m] + \opDTFT\Rvv[m]
-    && \text{by definition of $\Rxy$}
-    && \text{\xref{def:Rxym}}
-  \\&= \Swyy(\omega) + \Swvv(\omega)
-    && \text{by definition of $\Swyy$}
-    && \text{\xref{def:Swxy}}
-  \\
-  \Swxx[y'x](\omega)
-    &\eqd \opDTFT\Rxx[y'x][m]
-    && \text{by definition of \ope{DTFT}}
-    && \text{\xref{def:dtft}}
-  \\&\eqd \opDTFT\pE\brs{\rvy'[m]\rvx^\ast[0]}
-    && \text{by definition of $\Rxy$}
-    && \text{\xref{def:Rxym}}
-  \\&\eqd \opDTFT\pE\brs{(\rvy[m]+\fv[m])\rvx^\ast[0]}
-    && \text{by definition of $\rvy'$}
-  \\&= \opDTFT\pE\brs{\rvy[m]\rvx^\ast[0]}
-     + \opDTFT\pE\brs{\fv[m]\rvx^\ast[0]}
-  \\&= \opDTFT\pE\brs{\rvy[m]\rvx^\ast[0]} +    0
-    && \text{by \prope{uncorrelated} hypothesis}
-    && \text{(B)}
-  \\&= \Swyx(\omega)
-    && \text{by definition of $\Swxy$}
-    && \text{\xref{def:Swxy}}
-  \\
-  \Swxx[xy'](\omega)
-    &= \Swxx^\ast[y'x](\omega)
-    && \text{by \prefp{cor:Swxy}}
-  \\&= \Swyx^\ast(\omega)
-    && \text{by previous result}
-  \\&= \Swxy(\omega)
-    && \text{by \prefp{cor:Swxy}}
+   \Swxy(\omega)
+     &= \brlr{\ZSxy(z)}_{z=e^{i\omega}}
+     && \text{by definition of \ope{DTFT}}
+     && \text{\xref{def:dtft}}
+   \\&= \brlr{\ZSxx(z)\Zh^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
+     && \text{by \prefp{thm:ZSxy}}
+   \\&= \ZSxx\brp{e^{i\omega}}\Zh^\ast\brp{\frac{1}{e^{i\omega\ast}}}
+   \\&= \ZSxx\brp{e^{i\omega}}\Zh^\ast\brp{e^{i\omega}}
+   \\&= \Swxx(\omega) \Fh^\ast(\omega)
+     && \text{by definition of \ope{DTFT}}
+     && \text{\xref{def:dtft}}
+   \\
+   \Swyy(\omega)
+     &= \Swyy^\ast(\omega)
+     && \text{becauase $\Swyy$ is \prope{real-valued}}
+   \\&= \brp{\brlr{\ZSyy(z)}_{z=e^{i\omega}}}^\ast
+     && \text{by definition of \ope{DTFT}}
+     && \text{\xref{def:dtft}}
+   \\&= \brp{\brlr{\ZSyx(z)\Zh^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}}^\ast
+     && \text{by \prefp{thm:ZSxy}}
+   \\&= \brp{\ZSyx\brp{e^{i\omega}} \Zh^\ast\brp{\frac{1}{e^{i\omega\ast}}}}^\ast
+   \\&= \brp{\ZSyx\brp{e^{i\omega}} \Zh^\ast\brp{e^{i\omega}}}^\ast
+   \\&= \brp{\Swyx(\omega) \Fh^\ast(\omega)}^\ast
+     && \text{by definition of \ope{DTFT}}
+     && \text{\xref{def:dtft}}
+   \\&= \Swxy(\omega) \Fh(\omega)
+   \\
+   \Swyy(\omega)
+     &= \brlr{\ZSyy(z)}_{z=e^{i\omega}}
+     && \text{by definition of \ope{DTFT}}
+     && \text{\xref{def:dtft}}
+   \\&= \brlr{\ZSxx(z)\Zh\brp{z} \Zh^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
+     && \text{by \prefp{thm:ZSxy}}
+   \\&= \ZSxx\brp{e^{i\omega}} \Zh\brp{e^{i\omega}} \Zh^\ast\brp{\frac{1}{e^{i\omega\ast}}}
+   \\&= \ZSxx\brp{e^{i\omega}} \Zh\brp{e^{i\omega}} \Zh^\ast\brp{e^{i\omega}}
+   \\&= \Swxx(\omega) \Fh(\omega) \Fh^\ast(\omega)
+     && \text{by definition of \ope{DTFT}}
+     && \text{\xref{def:dtft}}
+   \\&= \Swxx(\omega) \abs{\Fh(\omega)}^2
+   \\
+     &\text{alternative proof to previous one:}
+   \\
+   \Swyy(\omega)
+     &= \Swyx(\omega) \Fh^\ast(\omega)
+     && \text{by previous result}
+     && \text{(2)}
+   \\&= \Swxy^\ast(\omega) \Fh^\ast(\omega)
+     && \text{by \prefp{cor:Swxy_sym}}
+   \\&= \brs{\Swxx(\omega) \Fh^\ast(\omega)}^\ast \Fh^\ast(\omega)
+     && \text{by previous result}
+     && \text{(1)}
+   \\&= \Swxx^\ast(\omega) \Fh(\omega) \Fh^\ast(\omega)
+     && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
+     && \text{\xref{def:staralg}}
+   \\&= \Swxx(\omega) \abs{\Fh(\omega)}^2
+     && \text{by \prefp{cor:Swxy_sym}}
 \end{align*}
 \end{proof}
 
@@ -218,24 +525,24 @@ is also causal and stable.
 
 
 The next theorem demonstrates a method for ``whitening"
-a \fncte{random sequence} $\fx(n)$ with a filter constructed from a decomposition
+a \fncte{random sequence} $\rvx(n)$ with a filter constructed from a decomposition
 of $\Rxx(m)$.
 The technique is stated precisely in \prefp{thm:d-innovations}
 and illustrated in \prefp{fig:d-innovations}.
 Both imply two filters with impulse responses $l(n)$ and $\gamma(n)$.
 Filter $l(n)$ is referred to as the \textbf{innovations filter}
-(because it generates or ``innovates" $\fx(n)$ from a white noise
+(because it generates or ``innovates" $\rvx(n)$ from a white noise
 process $\fw(n)$)
 and $\gamma(n)$ is referred to as the \textbf{whitening filter}
 because it produces a white noise sequence when the input sequence
-is $\fx(n)$.\footnote{\citerpp{papoulis}{401}{402}}
+is $\rvx(n)$.\footnote{\citerpp{papoulis}{401}{402}}
 
 
 %---------------------------------------
 \begin{theorem}
 \label{thm:d-innovations}
 %---------------------------------------
-Let $\fx(n)$ be a WSS \fncte{random sequence} with auto-correlation $\Rxx(m)$
+Let $\rvx(n)$ be a WSS \fncte{random sequence} with auto-correlation $\Rxx(m)$
 and spectral density $\Sxx(z)$.
 \textbf{If} $\Sxx(z)$ has a \textbf{rational expression},
 then the following are true:
@@ -248,7 +555,7 @@ then the following are true:
          the impulse response $\gamma(n)$ is
          \[ \Gamma(z) = \frac{1}{\fL(z)} \]
          is both causal and stable.
-   \item If $\fx(n)$ is the input to the filter $\gamma(n)$,
+   \item If $\rvx(n)$ is the input to the filter $\gamma(n)$,
          the output $\fy(n)$ is a \textbf{white noise sequence} such that
          \[ \Syy(z)=1 \hspace{2cm} \Ryy(m)=\kdelta(m).\]
 \end{enume}
