additive noise material

--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -95,30 +95,6 @@ Let $\rvx(n)$ and $\rvy(n)$ be \fncte{random sequence}s.\\
 \end{align*}
 \end{proof}
 
-\begin{figure}[ht]\color{figcolor}
-\begin{fsK}
-\begin{center}
-  \setlength{\unitlength}{0.2mm}
-  \begin{picture}(300,130)(-100,-80)
-  \thicklines
-  \put(-100,  10 ){\makebox (100, 40)[b]{$\rvx(n)$}  }
-  \put(-100, -50 ){\makebox (100, 40)[t]{$\Rxx(n,m)$}  }
-  \put(-100,   0 ){\vector  (  1,  0){100}             }
-  \put(   0, -50 ){\framebox(100,100){$\convd\fh(n)$}  }
-  \put( 100,   0 ){\vector  (  1,  0){100}             }
-  \put( 110,   0 ){\makebox (100, 40)[lb]{$\ds\rvy(n)=\fh(n)\convd\rvx(n)=\sum_k\fh(k)\rvx(n-k)$}  }
-  \put( 100, -50 ){\makebox (100, 40)[t]{$\Ryy(n,m)$}  }
-  \put(  50, -60 ){\makebox (  0,  0)[t]{$\Rxy(n,m)$}  }
-  \end{picture}
-\caption{
-   Linear system with \fncte{random sequence} input and output
-   \label{fig:d-linear-sys}
-   }
-\end{center}
-\end{fsK}
-\end{figure}
-
-
 %---------------------------------------
 \section{Wide Sense Stationary processes}
 \index{wide sense stationary}
@@ -289,17 +265,33 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 %=======================================
 %---------------------------------------
 \begin{definition}
-\label{def:psd}
-\label{def:csd}
-\label{def:Swxy}
+\label{def:Szxx}
+\label{def:Szxy}
 %---------------------------------------
-Let $\rvx(n)$ and $\rvy(n)$ be a \prope{wide sense stationary} \fncte{random sequence}s
+Let $\rvx(n)$ and $\rvy(n)$ be \prope{wide sense stationary} \fncte{random sequence}s
 with auto-correlation $\Rxx(m)$ and cross-correlation $\Rxy(m)$.
 Let $\opZ$ be the \ope{Z-transform operator}\ifsxref{dsp}{def:opZ}.
 \\
 \defbox{\begin{array}{MMrclcl}
-   The \opd{power spectral density} & (\opd{PSD}) $\ZSxx(z)$ of $\vx$ is           & \ZSxx(z) &\eqd& \opZ{\Rxx(m)} &\eqd& \ds \sum_{m\in\Z} \Rxx(m) z^{-m}\\
-   The \opd{cross spectral density} & (\opd{CSD}) $\ZSxy(z)$ of $\vx$ and $\vy$ is & \ZSxy(z) &\eqd& \opZ{\Rxy(m)} &\eqd& \ds \sum_{m\in\Z} \Rxy(m) z^{-m}
+   The \opd{z-domain power spectral density} & (\opd{PSD}) $\ZSxx(z)$ of $\vx$ is           & \Szxx(z) &\eqd& \opZ{\Rxx(m)} &\eqd& \ds \sum_{m\in\Z} \Rxx(m) z^{-m}\\
+   The \opd{z-domain cross spectral density} & (\opd{CSD}) $\ZSxy(z)$ of $\vx$ and $\vy$ is & \Szxy(z) &\eqd& \opZ{\Rxy(m)} &\eqd& \ds \sum_{m\in\Z} \Rxy(m) z^{-m}
+\end{array}}
+\end{definition}
+
+%---------------------------------------
+\begin{definition}
+\label{def:psd}
+\label{def:csd}
+\label{def:Swxx}
+\label{def:Swxy}
+%---------------------------------------
+Let $\rvx(n)$ and $\rvy(n)$ be \prope{wide sense stationary} \fncte{random sequence}s
+with auto-correlation $\Rxx(m)$ and cross-correlation $\Rxy(m)$.
+Let $\opDTFT$ be the \ope{Discrete Time Fourier Transform} (\ope{DTFT}) operator\ifsxref{dtft}{def:dtft}.
+\\
+\defbox{\begin{array}{MMrclcl}
+   The \opd{power spectral density} & (\opd{PSD}) $\ZSxx(z)$ of $\vx$ is           & \Swxx(z) &\eqd& \opDTFT{\Rxx(m)} &\eqd& \ds \sum_{m\in\Z} \Rxx(m) e^{-i\omega m}\\
+   The \opd{cross spectral density} & (\opd{CSD}) $\ZSxy(z)$ of $\vx$ and $\vy$ is & \Swxy(z) &\eqd& \opDTFT{\Rxy(m)} &\eqd& \ds \sum_{m\in\Z} \Rxy(m) e^{-i\omega m}
 \end{array}}
 \end{definition}
 
