--- a/common/randseq_addnoise.tex
+++ b/common/randseq_addnoise.tex
@@ -5,19 +5,22 @@
 %=======================================
 \chapter{Additive noise}
 %=======================================
+
 %---------------------------------------
+\begin{minipage}{\tw-55mm}
 \begin{theorem}
 \label{thm:xvy}
 %---------------------------------------
-\mbox{}\\
-\tbox{Let $\opS$ be the \structe{system} with $\rvy(n) = \rvx(n) + \rvv(n)$.}
+Let $\opS$ be the \structe{system} with $\rvy(n) = \rvx(n) + \rvv(n)$.
+\end{theorem}
+\end{minipage}
 \qquad\tbox{\includegraphics{graphics/sys_xvy.pdf}}
-\\
-\propbox{
+\thmbox{
   \brbr{\begin{array}{FrclDD}
-      (A).& \Rxx(n_1,m)             &=& \Rxx(n_2,m)         & (\prope{WSS})          & and
-    \\(B).& \pE\brs{\rvx(n)\rvv(n)} &=&\pE\rvx(n)\pE\rvv(n) & (\prope{uncorrelated}) & and
-    \\(C).& \pE\rvv(n)              &=& 0                   & (\prope{zero-mean})    &
+      (A).& \Rxx(n_1,m)             &=& \Rxx(n_2,m)         &(\prope{WSS})          & and
+    \\(B).& \pE\brs{\rvx(n)\rvv(n)} &=&\pE\rvx(n)\pE\rvv(n) &(\prope{uncorrelated}) & and 
+    %   \\& \mc{3}{D}{(\prope{uncorrelated})}               &                         and
+    \\(C).& \pE\rvv(n)              &=& 0                   & (\prope{zero-mean})     
   \end{array}}
   \implies
   \brbl{\begin{array}{FrclD}
@@ -29,7 +32,7 @@
     \\(6).&\Swyv(\omega) &=&                 \Swvv(\omega) & 
   \end{array}}
   }
-\end{theorem}
+\\
 \begin{proof}
 \begin{align*}
   \Ryy(m)
@@ -81,8 +84,8 @@
   \\
   \Szyy(z)
     &\eqd \opZ\Ryy(m)
-    && \text{by definition of $\opZ$}
-    && \text{\xref{def:opZ}}
+    && \text{by definition of $\Szxx$}
+    && \text{\xref{def:Szxx}}
   \\&= \opZ\Rqq(m) + \opZ\Rvv(m)
     && \text{by previous result}
     && \text{(1)}
@@ -103,51 +106,168 @@
 \end{align*}
 \end{proof}
 
+
 %---------------------------------------
-\begin{proposition}
-\footnote{
-  \citerpg{shin2008}{293}{0470725648}
-  }
-\label{prop:Swxyv}
+\begin{minipage}{\tw-55mm}
+\begin{theorem}
+\label{thm:dual_addnoise}
 %---------------------------------------
-\\\tbox{Let $\opS$ be the \structe{system} illustrated to the right.}
-\qquad\tbox{\includegraphics{graphics/sysH_xyuvpq.pdf}}
-\\
-\propbox{
-  \brb{\begin{array}{FMMD}
-      (A).& $\rvx(n)$ and $\fy(n)$ are &\prope{WSS}       & and
-    \\(B).& $\rvx(n)$ and $\rvv(n)$ are &                  &
-        \\& \quad\prope{uncorrelated} &                  & and
-    \\(C).& $\pE\rvv(n) = 0$          &(\prope{zero-mean})&
+Let $\opS$ be the \structe{system} with $\rvy(n) = \rvx(n) + \rvv(n)$.
+\end{theorem}
+\end{minipage}
+\qquad\tbox{\includegraphics{graphics/dual_addnoise.pdf}}
+\thmbox{
+  \brbr{\begin{array}{FMD}
+      (A).& $\rvx(n)$ and $\rvr(n)$ are \prope{WSS}                     & and
+    \\(B).& $\rvx$ and $\rvw$ are \prope{uncorrelated} & and
+    \\(C).& $\rvr$ and $\rvv$ are \prope{uncorrelated} & and
+    \\(D).& $\rvw$ and $\rvv$ are \prope{uncorrelated} & and
+    \\(E).& $\pE\rvv(n)=\pE\rvw(n)=0$ (\prope{zero-mean})     
   \end{array}}
   \implies
   \brb{\begin{array}{FrclD}
-          &\Swxy(\omega) &=& \Swxq(\omega)                 & and
+      (1).&\Rsy(m)       &=& \Rrx(m)                       & and
+    \\(2).&\Szsy(z)      &=& \Szrx(z)                      & and
+    \\(3).&\Swsy(\omega) &=& \Swrx(\omega)                 &
   \end{array}}
   }
-\end{proposition}
+\\
 \begin{proof}
 \begin{align*}
+  \Rsy(m) 
+    &\eqd \pE\brs{\rvs(m)\rvy^\ast(0)}
+    && \text{by definition of $\Rxy$}
+    && \text{\xref{def:Rxym}}
+  \\&\eqd \pE\brp{\brs{\rvr(m)+\rvw(m)}(\rvx(0)+\rvv(0))^\ast}
+    && \text{by definition of $\opS$}
+  \\&= \pE\brs{\rvr(m)\rvx^\ast(0)}  
+      +\pE\brs{\rvr(m)\rvv^\ast(0)}  
+      +\pE\brs{\rvw(m)\rvx^\ast(0)}  
+      +\pE\brs{\rvw(m)\rvv^\ast(0)}  
+  \\&= \pE\brs{\rvr(m)\rvx^\ast(0)}  
+      +\pE\rvr(m)\pE\rvv^\ast(0)  
+      +\pE\rvw(m)\pE\rvx^\ast(0)  
+      +\pE\rvw(m)\pE\rvv^\ast(0)  
+    && \text{by \prope{uncorrelated} hypothesis}
+    && \text{(B)}
+  \\&= \pE\brs{\rvr(m)\rvx^\ast(0)}  
+      +\pE\rvr(m)\cancelto{0}{\pE\rvv^\ast(0)}
+      +\cancelto{0}{\pE\rvw(m)}\pE\rvx^\ast(0)  
+      +\cancelto{0}{\pE\rvw(m)}\pE\rvv^\ast(0)  
+    && \text{by \prope{zero-mean} hypothesis}
+    && \text{(C)}
+  \\&= \Rrx(m)
+    && \text{by definition of $\Rxy$}
+    && \text{\xref{def:Rxym}}
+  \\
+  \Szsy(\omega)
+    &\eqd \opZ\Rsy(m)
+    && \text{by definition of $\Szxy$}
+    && \text{\xref{def:Szxy}}
+  \\&= \opZ\Rrx(m)
+    && \text{by previous result}
+    && \text{(1)}
+  \\&= \Szrx(z)
+    && \text{by definition of $\Szxy$}
+    && \text{\xref{def:Szxy}}
+  \\
+  \Swsy(\omega)
+    &\eqd \opDTFT\Rsy(m)
+    && \text{by definition of $\Swxy$}
+    && \text{\xref{def:Swxy}}
+  \\&= \opDTFT\Rrx(m)
+    && \text{by previous result}
+    && \text{(1)}
+  \\&= \Swrx(\omega)
+    && \text{by definition of $\Swxy$}
+    && \text{\xref{def:Swxy}}
+\end{align*}
+\end{proof}
+
+%---------------------------------------
+\begin{minipage}{\tw-70mm}
+\begin{theorem}
+Let $\opS$ be the \structe{system} illustrated to the right.
+%\footnote{
+%  \citerpg{shin2008}{293}{0470725648}
+%  }
+\label{thm:sysH_xyuvpq}
+%---------------------------------------
+\end{theorem}
+\end{minipage}
+\hfill\tbox{\includegraphics{graphics/sysH_xyuvpq.pdf}}
+\\
+\thmbox{
+  \brb{\begin{array}{FrclDD}
+      (A).& \Rxx(n_1,m)             &=& \Rxx(n_2,m)         &(\prope{WSS})          & and
+    \\(B).& \pE\brs{\rvx(n)\rvv(n)} &=&\pE\rvx(n)\pE\rvv(n) &(\prope{uncorrelated}) & and 
+       %\\& \mc{3}{D}{(\prope{uncorrelated})}               &                         and
+    \\(C).& \pE\rvv(n)              &=& 0                   & (\prope{zero-mean})   & 
+  \end{array}}
+  \implies
+  \brb{\begin{array}{FrclD}
+      (1).&\Rxy(m)       &=& \Rxq(m)                       & and
+    \\(2).&\Rxy(m)       &=& \Rpy(m)                       & and
+    \\(3).&\Szxy(z)      &=& \Szxq(z)                      & and
+    \\(4).&\Swxy(\omega) &=& \Swxq(\omega)                 &
+  \end{array}}
+  }
+\\
+\begin{proof}
+\begin{align*}
+  \Rxy(m)
+    &\eqd \pE\brs{\rvx(m)\rvy^\ast(0)}
+    && \text{by definition of $\Rxy$}
+    && \text{\xref{def:Rxym}}
+  \\&\eqd \pE\brs{\rvx(m)(\rvq(0)+\rvv(0))^\ast}
+    && \text{by definition of $\opS$}
+  \\&= \pE\brs{\rvx(m)\rvq^\ast(0)+\rvx(m)\rvv^\ast(0)}
+  \\&= \pE\brs{\rvx(m)\rvq^\ast(0)} + \pE\brs{\rvx(m)\rvv^\ast(0)}
+  \\&= \pE\brs{\rvx(m)\rvq^\ast(0)} + \brs{\pE\rvx(m)}\brs{\pE\rvv^\ast(0)}
+    && \text{by \prope{uncorrelated} hypothesis}
+    && \text{(B)}
+  \\&= \pE\brs{\rvx(m)\rvq^\ast(0)} + \brs{\pE\rvx(m)}\cancelto{0}{\brs{\pE\rvv^\ast(0)}}
+    && \text{by \prope{zero-mean} hypothesis}
+    && \text{(C)}
+  \\&= \Rxq(m)
+    && \text{by definition of $\Rxy$}
+    && \text{\xref{def:Rxym}}
+  \\
+  \Rxy(m)
+    &\eqd \pE\brs{\rvx(m)\rvy^\ast(0)}
+    && \text{by definition of $\Rxy$}
+    && \text{\xref{def:Rxym}}
+  \\&\eqd \pE\brp{\brs{\rvp(m)-\rvu(m)}\rvy^\ast(0)}
+    && \text{by definition of $\opS$}
+  \\&= \pE\brs{\rvp(m)\rvy^\ast(0)-\rvu(m)\rvy^\ast(0)}
+  \\&= \pE\brs{\rvp(m)\rvy^\ast(0)} - \brs{\pE\rvu(m)}\brs{\pE\rvy^\ast(0)}
+    && \text{by \prope{uncorrelated} hypothesis}
+    && \text{(B)}
+  \\&= \pE\brs{\rvp(m)\rvy^\ast(0)} - \cancelto{0}{\brs{\pE\rvu(m)}}\brs{\pE\rvy^\ast(0)}
+    && \text{by \prope{zero-mean} hypothesis}
+    && \text{(C)}
+  \\&= \Rpy(m)
+    && \text{by definition of $\Rxy$}
+    && \text{\xref{def:Rxym}}
+  \\
+  \Szxy(\omega)
+    &\eqd \opZ\Rxy(m)
+    && \text{by definition of $\Szxy$}
+    && \text{\xref{def:Szxy}}
+  \\&= \opZ\Rxq(m)
+    && \text{by previous result}
+    && \text{(1)}
+  \\&= \Szxq(z)
+    && \text{by definition of $\Szxy$}
+    && \text{\xref{def:Szxy}}
+  \\
   \Swxy(\omega)
     &\eqd \opDTFT\Rxy(m)
     && \text{by definition of $\Swxy$}
     && \text{\xref{def:Swxy}}
-  \\&\eqd \opDTFT\pE\brs{\rvx(m)\rvy^\ast(0)}
-    && \text{by definition of $\Rxy$}
-    && \text{\xref{def:Rxym}}
-  \\&\eqd \opDTFT\pE\brs{\rvx(m)(\rvq(0)+\rvv(0))^\ast}
-    && \text{by definition of $\opS$}
-  \\&= \opDTFT\pE\brs{\rvx(m)\rvq^\ast(0)+\rvx(m)\rvv^\ast(0)}
-  \\&= \opDTFT\pE\brs{\rvx(m)\rvq^\ast(0)} + \opDTFT\pE\brs{\rvx(m)\rvv^\ast(0)}
-  \\&= \opDTFT\pE\brs{\rvx(m)\rvq^\ast(0)} + \opDTFT\brs{\pE\rvx(m)}\brs{\pE\rvv^\ast(0)}
-    && \text{by \prope{uncorrelated} hypothesis}
-    && \text{(B)}
-  \\&= \opDTFT\pE\brs{\rvx(m)\rvq^\ast(0)}
-    && \text{by \prope{zero-mean} hypothesis}
-    && \text{(C)}
   \\&= \opDTFT\Rxq(m)
-    && \text{by definition of $\Rxy$}
-    && \text{\xref{def:Rxym}}
+    && \text{by previous result}
+    && \text{(1)}
   \\&= \Swxq(\omega)
     && \text{by definition of $\Swxy$}
     && \text{\xref{def:Swxy}}
@@ -155,47 +275,38 @@
 \end{proof}
 
 %---------------------------------------
-\begin{proposition}
-\label{prop:xGw_xHy}
+\begin{minipage}{\tw-80mm}
+\begin{theorem}
+\label{thm:xGw_xHy_addnoise}
 %---------------------------------------
-\mbox{}\\
-\begin{minipage}{\tw-70mm}
 Let $\opS$ be the \structe{system} illustrated to the right.
+\end{theorem}
 \end{minipage}
-\hfill\tbox{\includegraphics{graphics/xGy_xHw.pdf}}
+\hfill\tbox{\includegraphics{graphics/xGy_xHw_addnoise.pdf}}
 \\
-\propbox{
+\thmbox{
   \brb{\begin{array}{FMMD}
-      (A).& $\fg(n)$  is &\prope{LTI}       & and
-    \\(B).& $\rvx(n)$ is &\prope{WSS}       & 
+      (A).& $\fg(n)$  is                &\prope{LTI}       & and
+    \\(B).& $\rvx(n)$ is                &\prope{WSS}       & and
+    \\(C).& $\rvu(n)$ and $\rvv(n)$ are &\prope{zero-mean} & and
+    \\(D).& $\rvx(n)$, $\rvu(n)$, $\rvv(n)$ are &\prope{uncorrelated}
   \end{array}}
   \implies
-  \brb{\begin{array}{rcl}
-    \Swwy(\omega) &=& \fG(\omega)\Swxy(\omega)
+  \brb{\begin{array}{FrclD}
+      (1).& \Rsy(m)       &=& \Rrq(m)                  & and
+    \\(2).& \Swsy(\omega) &=& \Swrq(\omega)            & and
+    \\(3).& \Swsy(\omega) &=& \fG(\omega)\Swxy(\omega) &
   \end{array}}
   }
-\end{proposition}
+\\
 \begin{proof}
 \begin{align*}
-  \Swwy(\omega)
-    &\eqd \opDTFT\Rwy(m)
-    && \text{by definition of $\Swxy$}
-    && \text{\xref{def:Swxy}}
-  \\&\eqd \opDTFT\pE\brs{\rvw(m)\rvy^\ast(0)}
-    && \text{by definition of $\Rxy$}
-    && \text{\xref{def:Rxym}}
-  \\&= \opDTFT\pE\brs{\sum_{n\in\Z}\fg(n)\rvx(m-n)\rvy^\ast(0)}
-    && \text{by definition of $\Rxy$}
-    && \text{\xref{def:Rxym}}
-  \\&= \opDTFT\sum_{n\in\Z}\fg(n)\pE\brs{\rvx(m-n)\rvy^\ast(0)}
-  \\&= \opDTFT\sum_{n\in\Z}\fg(n)\Rxy(m-n)
-    && \text{by definition of $\Rxy$}
-    && \text{\xref{def:Rxym}}
-  \\&= \opDTFT\brs{\fg(n)\convd\Rxy(m-n)}
-    && \text{by definition of \ope{convolution}}
-    && \text{\xref{def:dsp_conv}}
-  \\&= \fG(\omega)\Sxy(\omega)
-    && \text{by \thme{convolution theorem}}
-    && \text{\xref{thm:conv}}
+  \Swsy(\omega)
+    &= \Swrq(\omega)
+    && \text{\prefp{thm:dual_addnoise}}
+  \\&= \fG(\omega)\Swxx[pq](\omega)
+    && \text{by \prefp{thm:xGw_xHy}}
+  \\&= \fG(\omega)\Swxy(\omega)
+    && \text{by \prefp{thm:sysH_xyuvpq}}
 \end{align*}
 \end{proof}
