Least squares estimate H1 development

--- a/common/bib/mathmisc.bib
+++ b/common/bib/mathmisc.bib
@@ -841,6 +841,28 @@
   url          = {http://en.wikisource.org/wiki/Pens%C3%A9es},
   }
 
+@book{popper1962,
+  title        = {Conjectures and refutations: the growth of scientific knowledge},
+  author       = {Karl Raimund Popper},
+  publisher    = {Basic Books},
+  year         = {1962},
+  pages        = {412},
+  url          = {https://books.google.com/books?id=OBgNAQAAIAAJ},
+  }
+
+@book{popper1963,
+  isbn10       = {1135971307},
+  isbn         = {9781135971304},
+  title        = {Conjectures and refutations: the growth of scientific knowledge},
+  author       = {Karl Raimund Popper},
+  publisher    = {Routledge},
+  year         = {1963},
+  edition      = {2},
+  pages        = {608},
+  urlw         = {http://www.worldcat.org/isbn/1135971307},
+  urla         = {http://www.amazon.com/dp/1135971307},
+  }
+
 @book{rivlin,
   author       = {Theodore J. Rivlin},
   title        = {An Introduction to the Approximation of Functions},
