--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -54,6 +54,32 @@
   doi          = {10.1016/S0022-460X(78)80007-8},
   }
 
+@book{bendat1980,
+  isbn10       = {0471058874},
+  isbn         = {9780471058878},
+  author       = {Julius S. Bendat and Allan G. Piersol}, 
+  title        = {Engineering Applications of Correlation and Spectral Analysis},
+  publisher    = {John Wiley \& Sons},
+  pages        = {302},
+  language     = {English},
+  year         = {1980},
+  urlg         = {http://books.google.com/books?vid=ISBN0471058874},
+  url          = {http://www.amazon.com/dp/0471058874},
+  }
+
+@book{bendat1993,
+  isbn10       = {0471570559},
+  isbn         = {9780471570554},
+  author       = {Julius S. Bendat and Allan G. Piersol}, 
+  title        = {Engineering Applications of Correlation and Spectral Analysis},
+  publisher    = {Wiley-Interscience},
+  edition      = {2},
+  language     = {English},
+  year         = {1993},
+  urlg         = {http://books.google.com/books?vid=ISBN0471570559},
+  url          = {http://www.amazon.com/dp/0471570559},
+  }
+
 @book{bendat2011,
   isbn10       = {1118210824},
   isbn         = {9781118210826},
@@ -67,20 +93,6 @@
   pages        = {640},
   url          = {http://books.google.com/books?vid=ISBN1118210824},
   urla         = {http://www.amazon.com/dp/1118210824},
-  }
-
-@book{bendat2013,
-  isbn10       = {0471570559},
-  isbn         = {9780471570554},
-  author       = {Julius S. Bendat and Allan G. Piersol}, 
-  title        = {Engineering Applications of Correlation and Spectral Analysis},
-  publisher    = {Wiley-Interscience},
-  edition      = {2},
-  language     = {English},
-  year         = {2013},
-  month        = {August 12},
-  urlg         = {http://books.google.com/books?vid=ISBN0471570559},
-  url          = {http://www.amazon.com/dp/0471570559},
   }
 
 @book{billingsley1995,
