--- a/common/randseq_addnoise.tex
+++ b/common/randseq_addnoise.tex
@@ -11,7 +11,7 @@
 \begin{theorem}
 \label{thm:xvy}
 %---------------------------------------
-Let $\opS$ be the \structe{system} with $\rvy(n) = \rvx(n) + \rvv(n)$.
+Let $\opS$ be the \structe{system} illustrated to the right:
 \end{theorem}
 \end{minipage}
 \qquad\tbox{\includegraphics{graphics/sys_xvy.pdf}}
@@ -112,7 +112,7 @@ Let $\opS$ be the \structe{system} with $\rvy(n) = \rvx(n) + \rvv(n)$.
 \begin{theorem}
 \label{thm:dual_addnoise}
 %---------------------------------------
-Let $\opS$ be the \structe{system} with $\rvy(n) = \rvx(n) + \rvv(n)$.
+Let $\opS$ be the \structe{system} illustrated to the right:
 \end{theorem}
 \end{minipage}
 \qquad\tbox{\includegraphics{graphics/dual_addnoise.pdf}}
@@ -142,16 +142,19 @@ Let $\opS$ be the \structe{system} with $\rvy(n) = \rvx(n) + \rvv(n)$.
     && \text{by definition of $\opS$}
   \\&= \pE\brs{\rvr(m)\rvx^\ast(0)}  
       +\pE\brs{\rvr(m)\rvv^\ast(0)}  
+      \\&\qquad
       +\pE\brs{\rvw(m)\rvx^\ast(0)}  
       +\pE\brs{\rvw(m)\rvv^\ast(0)}  
   \\&= \pE\brs{\rvr(m)\rvx^\ast(0)}  
       +\pE\rvr(m)\pE\rvv^\ast(0)  
+      \\&\qquad
       +\pE\rvw(m)\pE\rvx^\ast(0)  
       +\pE\rvw(m)\pE\rvv^\ast(0)  
     && \text{by \prope{uncorrelated} hypothesis}
     && \text{(B)}
   \\&= \pE\brs{\rvr(m)\rvx^\ast(0)}  
       +\pE\rvr(m)\cancelto{0}{\pE\rvv^\ast(0)}
+      \\&\qquad
       +\cancelto{0}{\pE\rvw(m)}\pE\rvx^\ast(0)  
       +\cancelto{0}{\pE\rvw(m)}\pE\rvv^\ast(0)  
     && \text{by \prope{zero-mean} hypothesis}
@@ -208,6 +211,7 @@ Let $\opS$ be the \structe{system} illustrated to the right.
   \brb{\begin{array}{FrclD}
       (1).&\Rxy(m)       &=& \Rxq(m)                       & and
     \\(2).&\Rxy(m)       &=& \Rpy(m)                       & and
+    \\(3).&\Rxy(m)       &=& \Rpq(m)                       & and
     \\(3).&\Szxy(z)      &=& \Szxq(z)                      & and
     \\(4).&\Swxy(\omega) &=& \Swxq(\omega)                 &
   \end{array}}
@@ -247,6 +251,35 @@ Let $\opS$ be the \structe{system} illustrated to the right.
     && \text{by \prope{zero-mean} hypothesis}
     && \text{(C)}
   \\&= \Rpy(m)
+    && \text{by definition of $\Rxy$}
+    && \text{\xref{def:Rxym}}
+  \\
+  \Rxy(m)
+    &\eqd \pE\brs{\rvx(m)\rvy^\ast(0)}
+    && \text{by definition of $\Rxy$}
+    && \text{\xref{def:Rxym}}
+  \\&\eqd \pE\brp{\brs{\rvp(m)-\rvu(m)}\brs{\rvq(m)+\rvv(m)}^\ast(0)}
+    && \text{by definition of $\opS$}
+  \\&= \pE\brs{\rvp(m)\rvq^\ast(0)}
+     + \pE\brs{\rvp(m)\rvv^\ast(0)}
+     \\&\qquad
+     - \pE\brs{\rvu(m)\rvq^\ast(0)}
+     - \pE\brs{\rvu(m)\rvv^\ast(0)}
+  \\&= \pE\brs{\rvp(m)}\pE\brs{\rvq^\ast(0)}
+     + \pE\brs{\rvp(m)}\pE\brs{\rvv^\ast(0)}
+     \\&\qquad
+     - \pE\brs{\rvu(m)}\pE\brs{\rvq^\ast(0)}
+     - \pE\brs{\rvu(m)}\pE\brs{\rvv^\ast(0)}
+    && \text{by \prope{uncorrelated} hypothesis}
+    && \text{(B)}
+  \\&= \pE\brs{\rvp(m)\rvq^\ast(0)}
+     + \pE\brs{\rvp(m)}\cancelto{0}{\pE\brs{\rvv^\ast(0)}}
+     \\&\qquad
+     - \cancelto{0}{\pE\brs{\rvu(m)}}\pE\brs{\rvq^\ast(0)}
+     - \cancelto{0}{\pE\brs{\rvu(m)}}\pE\brs{\rvv^\ast(0)}
+    && \text{by \prope{zero-mean} hypothesis}
+    && \text{(C)}
+  \\&= \Rpq(m)
     && \text{by definition of $\Rxy$}
     && \text{\xref{def:Rxym}}
   \\
