--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1118,6 +1118,8 @@
 
 \newcommand{\ZH}    [0]{{\ZT{\fH}}}
 \newcommand{\FH}    [0]{{\ft{\fH}}}
+\newcommand{\FW}    [0]{{\ft{W}}}
+\newcommand{\FQ}    [0]{{\ft{Q}}}
 
 \newcommand{\sym}   [0]{\mathup{\lambda}}
 \newcommand{\symf}  [0]{\ft{\lambda}}
@@ -1676,6 +1678,8 @@
 \newcommand{\Swqp}   {\Swxx[qp]}
 \newcommand{\Swwy}   {\Swxx[wy]}
 \newcommand{\Swyw}   {\Swxx[yw]}
+\newcommand{\Swwq}   {\Swxx[wq]}
+\newcommand{\Swqw}   {\Swxx[qw]}
 \newcommand{\Swry}   {\Swxx[ry]}
 
 \newcommand{\Swphi}  {\Swxx[\phi\phi]}
@@ -1808,7 +1812,7 @@
  \newcommand{\estHgm}   {\estH_{\mathsfup{gm}}}  % 
  \newcommand{\estHharm}   {\estH_{\mathsfup{harm}}}  % 
 
- \newcommand{\fCost}[0]{\ensuremath{C}}
+ \newcommand{\fCost}[0]{\mathfnct{C}}
  \newcommand{\vpo  } [0]{\vp_{\mathsfup{opt}}}
  \newcommand{\vpio } [0]{\ensuremath{\check{\vpo}}}
  \newcommand{\vpe  } [0]{\ensuremath{\hat{\vp}}}
